feat: get profile API
