# public/swagger.json
@@ -136,6 +136,33 @@
       }
     },
     "/api/users/{id}": {
+      "get": {
+        "summary": "유저 정보 업데이트",
+        "tags": ["Users"],
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "description": "불러올 유저의 ID",
+            "schema": {
+              "type": "string",
+              "example": "a888fe3f-8a7e-4069-98e2-173c8c74c645"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "유저 정보 불러오기 성공"
+          },
+          "404": {
+            "description": "해당 유저를 찾을 수 없음"
+          },
+          "500": {
+            "description": "서버 오류"
+          }
+        }
+      },
       "put": {
         "summary": "유저 정보 업데이트",
         "tags": ["Users"],
